# reefbot-1

./: .gitignore  README.md
cv_bridge/: CMakeLists.txt  manifest.xml
cv_bridge/.svn/: all-wcprops  entries
cv_bridge/include/.svn/: all-wcprops  entries
cv_bridge/include/cv_bridge/: cv_bridge.h
cv_bridge/src/: cv_bridge.cpp
cv_bridge/src/.svn/: all-wcprops  entries
cv_bridge/src/cv_bridge/: cv_bridge.py
cv_bridge/test/: cv_bridge_test.cc  cv_bridge_test.py
hima_experiment/: CMakeLists.txt  mainpage.dox  manifest.xml
hima_experiment/msg/: FrameResult.msg  HimaCascadeResult.msg  PersonLocation.msg
hima_experiment/settings/: TestExperiment.sh
hima_experiment/settings/caltech/: CaltechEntropy.sh  CaltechSaliencyEntropy.sh
hima_experiment/settings/cat/: CatFindPeople.sh  FrontPeople.sh  FrontPeopleRebig.sh  FrontPeopleSmall.sh  TopPeople1.sh  TopPeople1Rebig.sh  TopPeople1Small.sh  TopPeople2.sh  TopPeople2Rebig.sh  TopPeople2Small.sh
hima_experiment/settings/eth/: EthEntropyTest.sh  EthSaliencyEntropy.sh  EthSimplestCascade.sh
hima_experiment/settings/graph_scripts/: different_vuestimators.sh  ignore_time.sh  scatat.sh
hima_experiment/settings/hima/: HimaMotionEntropy.sh  HimaMotionFracFramesize.sh  HimaSaliencyEntropy.sh  Set22SimplestTestCascade.sh  Set400EntropyBlurTest.sh  Set400EntropySensitivity.sh  Set400EntropyTest.sh  Set400RandomFrameCascade.sh  Set400SimplestTest.sh  Set400SimplestTestCascade.sh  Set6SimplestTest.sh  Set6SimplestTestCascade.sh  Set9SimplestTestCascade.sh
hima_experiment/settings/inria/: TrainINRIAHogDifferentBlockSizeDetectors.sh  TrainINRIAHogSubwindowDetectors.sh  TrainINRIAIntegralHogCascadeEth.sh  TrainINRIAIntegralHogCascadeHima.sh  TrainINRIAIntegralHogCascadeTest.sh  TrainINRIAIntegralHogFullWindowDetector.sh
hima_experiment/settings/vu_estimation/: TestExtractionScript.sh
hima_experiment/src/: CalculateProcessingTime.py  CalculateRecallStats.py  CaltechToHima.py  CascadeAccuracy.py  CatBags.py  CreateBlankAnnotations.sh  CreateCascadeVideo.py  CreateHimaVideo.py  CreateVUEstimationVideo.py  DetectionUtils.py  DetectionUtilsTest.py  DetectorMetrics.py  EthToHima.py  EvaluateVisualUtility.py  HimaDataLoader.py  HimaDataLoaderTest.py  ParameterSetter.py  PlotComputationModel.py  PlotDataProcessedGraph.py  PlotMissRateFalsePos.py  PlotPeopleStats.py  PlotPrecisionRecall.py  PlotSpeedupGraphs.py  PlotVUAccuracy.py  PlotVUCorrelation.py  PlottingUtils.py  RunHimaCascade.py  RunHimaExperiment.py  TrainCascadeUsingBag.cc  VUAccuracy.py  cDetectionUtils.cc  hima_images2bag.py  vbbToHima.m
hima_experiment/src/caltech_code/: vbb.m
species_id/: CMakeLists.txt  mainpage.dox  manifest.xml
species_id/msg/: SpeciesIDScoring.msg  VisualUtilityEstimation.msg
species_id/settings/blob090710/: BuildCSurfDictionary.sh  BuildHSVDictionary.sh  BuildIndexOppSurf.sh  BuildLabDictionary.sh  BuildOpponentSurfDictionary.sh  BuildSiftDictionary.sh  BuildSurfDictionary.sh  CreateBlobFrames.sh  ExtractCSurfFeatures.sh  ExtractHSVFeatures.sh  ExtractLabFeatures.sh  ExtractOpponentSurfFeatures.sh  ExtractSiftFeatures.sh  ExtractSurfFeatures.sh  RunLabelingExperiment.sh  RunLabelingExperimentCSurf.sh  RunLabelingExperimentLabSurf.sh  RunLabelingExperimentOppSurf.sh  RunLabelingExperimentRequestSize.sh  RunLabelingExperimentSift.sh  RunLabelingExperimentSurf.sh  RunLabelingExperimentTest.sh  RunLabelingExperimentTrainingPerformance.sh  RunLabelingExperimentUniformTestset.sh
species_id/settings/extraction081011/: BuildCSurfDictionary.sh  BuildHSVDictionary.sh  BuildIndexOppSurf.sh  BuildOpponentSurfDictionary.sh  BuildSiftDictionary.sh  BuildSurfDictionary.sh  BuildSurfDictionary100k.sh  BuildSurfDictionary200k.sh  BuildSurfDictionaryLinear.sh  CreateBlobFrames.sh  CreateBlobFrames_201101.sh  ExtractCSurfFeatures.sh  ExtractHSVFeatures.sh  ExtractOpponentSurfFeatures.sh  ExtractSiftFeatures.sh  ExtractSurfFeatures.sh  RunLabelingExperiment100k.sh  RunLabelingExperimentCSurf.sh  RunLabelingExperimentGeoThresh.sh  RunLabelingExperimentHessianthresh.sh  RunLabelingExperimentHumanCSurf.sh  RunLabelingExperimentHumanOppSurf.sh  RunLabelingExperimentHumanOppSurfGeo.sh  RunLabelingExperimentHumanRequestSize.sh  RunLabelingExperimentHumanRequestSizeGeo.sh  RunLabelingExperimentHumanSurf.sh  RunLabelingExperimentHumanSurfGeo.sh  RunLabelingExperimentOppSurf.sh  RunLabelingExperimentOppSurfGeo.sh  RunLabelingExperimentOppSurfRand.sh  RunLabelingExperimentRequestSize.sh  RunLabelingExperimentRequestSizeGeo.sh  RunLabelingExperimentRequestSizeRand.sh  RunLabelingExperimentSift.sh  RunLabelingExperimentSiftGeo.sh  RunLabelingExperimentSurf.sh  RunLabelingExperimentSurf200k.sh  RunLabelingExperimentSurfGeo.sh  RunLabelingExperimentSurfRand.sh  RunLabelingExperimentTest.sh  (+7 more)
species_id/settings/vu_estimation/: ExtractAllFeatures.sh  (+8 more)
species_id/src/: BuildFishIndex.cc  ColorConverter-Inl.h  ColorConverter.cc  ColorConverter.h  ColorDescriptorGenerator.cc  ColorDescriptorGenerator.h  ColorSURFDescriptorGenerator.cc  ColorSURFDescriptorGenerator.h  CreateBatchBlobFrames.sh  CreateFishClassifierVideo.py  CreateVUEstimationVideo.py  DocSimilarityCalculator.cc  DocSimilarityCalculator.h  EstimateSpeciesGridTiming.cc  EvaluateVisualUtility.py  EvolutionModel.cc  EvolutionModel.h  ExtractBatchFeatures.sh  ExtractFeatures-Main.cc  ExtractGridClassification.py  FishDataLoader.py  HighlightMotion.cc  HistogramDescriptorGenerator-Inl.h  HistogramDescriptorGenerator.h  HistogramImageDescriptor.cc  HistogramImageDescriptor.h  ImageDescriptor-Inl.h  ImageDescriptor.h  ImageDescriptorGenerator-Inl.h  ImageDescriptorGenerator.h  ImageDescriptorGeneratorFlags.cc  ImageDescriptorGeneratorFlags.h  ImageDocument.cc  ImageDocument.h  ImageSearchIndex.cc  ImageSearchIndex.h  MakeDictionary.sh  MotionExtractor.cc  MotionExtractor.h  MotionROSNode.cc  (+29 more)
species_id/srv/: SpeciesID.srv  SpeciesIDGrid.srv
species_id/test/: DetectionUtilsTest.py  DocSimilarityTest.cc  HistogramDescriptorGeneratorTest.cc  ImageDocumentTest.cc  ImageSearchIndexTest.cc  MotionExtractorTest.cc  TermTest.cc
(+302 files in other folders)
